fix Link -> anchor

--- a/index.html
+++ b/index.html
@@ -7,7 +7,6 @@
     />
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <!-- <script src="https://unpkg.com/@tailwindcss/browser@4"></script> -->
     <link rel="stylesheet" href="/src/globals.css">
     <link rel="stylesheet" href="/src/fancy.css">
     <link rel="stylesheet" href="/src/main.css">
@@ -38,13 +37,13 @@
         <h3 class="special-underline w-fit">› links</h3>
         <ul>
           <li>
-            <Link href="https://blog.veivelp.com">blog.veivelp.com</Link>
+            <a href="https://blog.veivelp.com">blog.veivelp.com</a>
           </li>
           <li>
-            <Link href="https://github.com/Veivel">github.com/veivel</Link>
+            <a href="https://github.com/Veivel">github.com/veivel</a>
           </li>
           <li>
-            <Link href="https://linkedin.com/in/veivel">linkedin.com/in/veivel</Link>
+            <a href="https://linkedin.com/in/veivel">linkedin.com/in/veivel</a>
           </li>
         </ul>
         <br/>
@@ -54,7 +53,7 @@
         <p>
           don't hesitate to reach out!
           <br/>
-          you can find me on my LinkedIn
+          you can find me on my aedIn
           or via email: 
           <!-- <span class="text-white">veivel <at> ristek.cs.ui.ac.id</span> -->
           <span class="text-white">givarrel.veivel [at] ui.ac.id</span>
