--- a/index.html
+++ b/index.html
@@ -6,7 +6,12 @@
       content="hello world!"
     />
     <meta charset="UTF-8" />
-    <meta name="viewport" content="width=device-width, initial-scale=1.0" />
+    <meta name="viewport" content="width=device-width, initial-scale=1" />
+    <link rel="icon" type="image/x-icon" href="/favicon.ico">
+    <link rel="preload" href="/geist-mono.woff2" as="font" crossorigin="" type="font/woff2">
+    <link rel="preload" href="/geist.woff2" as="font" crossorigin="" type="font/woff2">
+    <!-- <link rel="preload" href="/747892c23ea88013-s.woff2" as="font" crossorigin="" type="font/woff2"> -->
+    <!-- <link rel="preload" href="/ba015fad6dcf6784-s.woff2" as="font" crossorigin="" type="font/woff2"> -->
     <link rel="stylesheet" href="/src/globals.css">
     <link rel="stylesheet" href="/src/fancy.css">
     <link rel="stylesheet" href="/src/main.css">
@@ -14,7 +19,7 @@
   <body class="p-2 min-h-screen flex flex-col">
     <div class="relative py-8 px-4 sm:px-[calc(50dvw-400px)] 2xl:px-[calc(50dvw-400px)] flex flex-col h-fit">
       <div class="flex flex-col">
-        <h2 class="special-underline w-fit">veivelp.com</h2>
+        <h1 class="special-underline w-fit">veivelp.com</h1>
         <p>welcome to my humble little abode!</p>
         <br/>
       </div>
@@ -53,7 +58,7 @@
         <p>
           don't hesitate to reach out!
           <br/>
-          you can find me on my aedIn
+          you can find me on LinkedIn
           or via email: 
           <!-- <span class="text-white">veivel <at> ristek.cs.ui.ac.id</span> -->
           <span class="text-white">givarrel.veivel [at] ui.ac.id</span>
@@ -63,7 +68,7 @@
     </div>
     <div class="text-xs mt-auto geist-mono">
       <span>last updated: </span>
-      <span class="text-white">1 March 2025</span>
+      <span class="text-white">Saturday, 1 March 2025</span>
     </div>
   </body>
 </html>
