--- a/index.html
+++ b/index.html
@@ -13,7 +13,7 @@
   <body class="p-2 min-h-screen flex flex-col">
     <div class="relative py-8 px-4 sm:px-[calc(50dvw-400px)] 2xl:px-[calc(50dvw-400px)] flex flex-col h-fit">
       <div class="flex flex-col">
-        <h1 class="special-underline w-fit">veivelp.com</h1>
+        <h1 class="special-underline w-fit">veivel's website</h1>
         <p>welcome to my humble little abode!</p>
         <br/>
       </div>
