fix: remove 'intern' from role

--- a/index.html
+++ b/index.html
@@ -20,15 +20,15 @@
       <div class="flex flex-col">
         <h3 class="special-underline w-fit">› about me</h3>
         <p>
-          i don't like labels. they restrain and confine you into an incomplete, one-dimensional identity
-          – judge me as you will!
+          i'm not someone who fancies labels. they restrain and confine you into an incomplete, one-dimensional identity
+          – learn about me, and judge me as you will!
           <br/><br/>
-          i am someone who loves to fiddle with things, experiment, and learn. 
+          i love to fiddle with things, experiment, and learn.
           the interests i've been pursuing include devops, data engineering, and databases
           (but you can pique my interest with any software or data infrastructure). 
           <br/><br/>
           i am on-course to graduate from Universitas Indonesia with a computer science degree 
-          later this year, in fall 2025. currently, i am working as a data engineer (intern) @ InfinID :)
+          later this year, in fall 2025. currently, i am working as a data engineer @ InfinID :)
         </p>
         <br/>
       </div>
