feat: update content aboutme

--- a/index.html
+++ b/index.html
@@ -20,15 +20,15 @@
       <div class="flex flex-col">
         <h3 class="special-underline w-fit">› about me</h3>
         <p>
-          i'm not someone who fancies labels. they restrain and confine you into an incomplete, one-dimensional identity
-          – learn about me, and judge me as you will!
-          <br/><br/>
-          i love to fiddle with things, experiment, and learn.
+          im someone who loves to fiddle with things, experiment, and learn.
           the interests i've been pursuing include devops, data engineering, and databases
           (but you can pique my interest with any software or data infrastructure). 
           <br/><br/>
+          i'm not someone who fancies labels, i believe they restrain and confine you into
+          an incomplete, one-dimensional identity.
+          <br/><br/>
           i am on-course to graduate from Universitas Indonesia with a computer science degree 
-          later this year, in fall 2025. currently, i am working as a data engineer @ InfinID :)
+          later this year, in fall 2025. currently, i am building data @ InfinID :)
         </p>
         <br/>
       </div>
@@ -62,7 +62,7 @@
     </div>
     <div class="text-xs mt-auto geist-mono">
       <span>last updated: </span>
-      <span class="text-white">Saturday, 1 March 2025</span>
+      <span class="text-white">Sunday, 22 June 2025</span>
     </div>
   </body>
 </html>
