fix: minor rework

--- a/index.html
+++ b/index.html
@@ -12,27 +12,24 @@
   </head>
   <body class="p-2 min-h-screen flex flex-col">
     <div class="relative py-8 px-4 sm:px-[calc(50dvw-400px)] 2xl:px-[calc(50dvw-400px)] flex flex-col h-fit">
-      <div class="flex flex-col">
+      <div class="flex flex-col mb-4">
         <h1 class="special-underline w-fit">veivel's website</h1>
         <p>welcome to my humble little abode!</p>
-        <br/>
       </div>
-      <div class="flex flex-col">
+      <div class="flex flex-col mb-4">
         <h3 class="special-underline w-fit">› about me</h3>
         <p>
           im someone who loves to fiddle with things, experiment, and learn.
           the interests i've been pursuing include devops, data engineering, and databases
           (but you can pique my interest with any software or data infrastructure). 
+          in fall of 2025, i graduated from Universitas Indonesia with a computer science degree.
+          currently, i am building data @ InfinID :)
           <br/><br/>
-          i'm not someone who fancies labels, i believe they restrain and confine you into
-          an incomplete, one-dimensional identity.
-          <br/><br/>
-          i am on-course to graduate from Universitas Indonesia with a computer science degree 
-          later this year, in fall 2025. currently, i am building data @ InfinID :)
+          outside of work, you'll find me working on working on doohickeys & thingamabobs,
+          or contributing to random projects on GitHub.
         </p>
-        <br/>
       </div>
-      <div class="flex flex-col">
+      <div class="flex flex-col mb-4">
         <h3 class="special-underline w-fit">› links</h3>
         <ul>
           <li>
@@ -45,24 +42,25 @@
             <a href="https://linkedin.com/in/veivel">linkedin.com/in/veivel</a>
           </li>
         </ul>
-        <br/>
       </div>
-      <div class="flex flex-col">
+      <div class="flex flex-col mb-4">
+        <h3 class="special-underline w-fit">› projects</h3>
+        <p>soon 👀</p>
+      </div>
+      <div class="flex flex-col mb-4">
         <h3 class="special-underline w-fit">› contact</h3>
         <p>
           don't hesitate to reach out!
           <br/>
           you can find me on LinkedIn
           or via email: 
-          <!-- <span class="text-white">veivel <at> ristek.cs.ui.ac.id</span> -->
-          <span class="text-white">givarrel.veivel [at] ui.ac.id</span>
+          <span class="text-white">me [at] veivelp.com</span>
         </p>
-        <br />
-    </div>
+      </div>
     </div>
     <div class="text-xs mt-auto geist-mono">
       <span>last updated: </span>
-      <span class="text-white">Sunday, 22 June 2025</span>
+      <span class="text-white">Sunday, 28 September 2025</span>
     </div>
   </body>
 </html>
